--- a/Exercise-5-problem-2.ipynb
+++ b/Exercise-5-problem-2.ipynb
@@ -967,7 +967,7 @@
    },
    "outputs": [],
    "source": [
-    "# exporting files\n",
+    "# exporting files to csv with , and rounding values to 2 decimales\n",
     "kumpula.to_csv(\"~/work/exercises/exercise-5-hennaylimaa/Kumpula_temps_May_Aug_2017.csv\", sep=\",\", float_format=\"%.2f\")\n",
     "rovaniemi.to_csv(\"~/work/exercises/exercise-5-hennaylimaa/Rovaniemi_temps_May_Aug_2017.csv\", sep=\",\", float_format=\"%.2f\")"
    ]
