--- a/Exercise-5-problem-3.ipynb
+++ b/Exercise-5-problem-3.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -82,18 +82,38 @@
    },
    "outputs": [],
    "source": [
-    "kumpula = None\n",
-    "rovaniemi = None\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# imports pandas as pd\n",
+    "import pandas as pd\n",
+    "# readc csv files from the filepath to variables kumpula and rovaniemi\n",
+    "kumpula = pd.read_csv(\"~/work/exercises/exercise-5-hennaylimaa/Kumpula_temps_May_Aug_2017.csv\")\n",
+    "rovaniemi = pd.read_csv(\"~/work/exercises/exercise-5-hennaylimaa/Rovaniemi_temps_May_Aug_2017.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Unnamed: 0   USAF  YR--MODAHRMN  TEMP  MAX  MIN  Celsius\n",
+      "0        8770  29980  201705010000  37.0  NaN  NaN        3\n",
+      "1        8771  29980  201705010100  37.0  NaN  NaN        3\n",
+      "2        8772  29980  201705010200  37.0  NaN  NaN        3\n",
+      "3        8773  29980  201705010300  37.0  NaN  NaN        3\n",
+      "4        8774  29980  201705010400  39.0  NaN  NaN        4\n",
+      "\n",
+      "   Unnamed: 0   USAF  YR--MODAHRMN  TEMP  MAX  MIN  Celsius\n",
+      "0           0  28450  201705010000  31.0  NaN  NaN       -1\n",
+      "1           1  28450  201705010020  30.0  NaN  NaN       -1\n",
+      "2           2  28450  201705010050  30.0  NaN  NaN       -1\n",
+      "3           3  28450  201705010100  31.0  NaN  NaN       -1\n",
+      "4           4  28450  201705010120  30.0  NaN  NaN       -1\n"
+     ]
+    }
+   ],
    "source": [
     "print(kumpula.head())\n",
     "print('')\n",
@@ -128,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -143,16 +163,14 @@
    },
    "outputs": [],
    "source": [
-    "kumpula_median = None\n",
-    "rovaniemi_median = None\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# adds median value of column celsius to new variables\n",
+    "kumpula_median = kumpula[\"Celsius\"].median()\n",
+    "rovaniemi_median = rovaniemi[\"Celsius\"].median()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -167,7 +185,16 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kumpula median: 14.0\n",
+      "Rovaniemi median: 11.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Prints the median temperatures\n",
     "print(f\"Kumpula median: {kumpula_median}\")\n",
@@ -202,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -218,14 +245,13 @@
    "outputs": [],
    "source": [
     "# Select the subset of the Kumpula and Rovaniemi data for the 5th and 6th month\n",
-    "kumpula_may = None\n",
-    "rovaniemi_may = None\n",
+    "# creates a subset of dataframes kumpula and rovaniemi based on column YR--MODAHRMN and the date has to be in may\n",
+    "kumpula_may = kumpula.loc[(kumpula['YR--MODAHRMN'] >= 201705010000) & (kumpula['YR--MODAHRMN'] < 201706010000)]\n",
+    "rovaniemi_may = rovaniemi.loc[(rovaniemi['YR--MODAHRMN'] >= 201705010000) & (rovaniemi['YR--MODAHRMN'] < 201706010000)]\n",
     "\n",
-    "kumpula_june = None\n",
-    "rovaniemi_june = None\n",
-    "\n",
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# creates a subset of dataframes kumpula and rovaniemi based on column YR--MODAHRMN and the date has to be in june\n",
+    "kumpula_june = kumpula.loc[(kumpula['YR--MODAHRMN'] >= 201706010000) & (kumpula['YR--MODAHRMN'] < 201707010000)]\n",
+    "rovaniemi_june = rovaniemi.loc[(rovaniemi['YR--MODAHRMN'] >= 201706010000) & (rovaniemi['YR--MODAHRMN'] < 201707010000)]"
    ]
   },
   {
@@ -250,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -265,7 +291,29 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First values in May, Kumpula:\n",
+      "   Unnamed: 0   USAF  YR--MODAHRMN  TEMP  MAX  MIN  Celsius\n",
+      "0        8770  29980  201705010000  37.0  NaN  NaN        3\n",
+      "1        8771  29980  201705010100  37.0  NaN  NaN        3\n",
+      "2        8772  29980  201705010200  37.0  NaN  NaN        3\n",
+      "3        8773  29980  201705010300  37.0  NaN  NaN        3\n",
+      "4        8774  29980  201705010400  39.0  NaN  NaN        4\n",
+      "\n",
+      "Last values in May, Kumpula:\n",
+      "     Unnamed: 0   USAF  YR--MODAHRMN  TEMP  MAX  MIN  Celsius\n",
+      "736        9506  29980  201705311900  51.0  NaN  NaN       11\n",
+      "737        9507  29980  201705312000  50.0  NaN  NaN       10\n",
+      "738        9508  29980  201705312100  47.0  NaN  NaN        8\n",
+      "739        9509  29980  201705312200  44.0  NaN  NaN        7\n",
+      "740        9510  29980  201705312300  43.0  NaN  NaN        6\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"First values in May, Kumpula:\\n{kumpula_may.head()}\\n\")\n",
     "print(f\"Last values in May, Kumpula:\\n{kumpula_may.tail()}\")"
@@ -273,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -289,7 +337,29 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First values in June, Kumpula:\n",
+      "     Unnamed: 0   USAF  YR--MODAHRMN  TEMP  MAX  MIN  Celsius\n",
+      "741        9511  29980  201706010000  42.0  NaN  NaN        6\n",
+      "742        9512  29980  201706010100  40.0  NaN  NaN        4\n",
+      "743        9513  29980  201706010200  40.0  NaN  NaN        4\n",
+      "744        9514  29980  201706010300  41.0  NaN  NaN        5\n",
+      "745        9515  29980  201706010400  44.0  NaN  NaN        7\n",
+      "\n",
+      "Last values in June, Kumpula:\n",
+      "      Unnamed: 0   USAF  YR--MODAHRMN  TEMP  MAX  MIN  Celsius\n",
+      "1450       10220  29980  201706301900  65.0  NaN  NaN       18\n",
+      "1451       10221  29980  201706302000  61.0  NaN  NaN       16\n",
+      "1452       10222  29980  201706302100  63.0  NaN  NaN       17\n",
+      "1453       10223  29980  201706302200  62.0  NaN  NaN       17\n",
+      "1454       10224  29980  201706302300  61.0  NaN  NaN       16\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"First values in June, Kumpula:\\n{kumpula_june.head()}\\n\")\n",
     "print(f\"Last values in June, Kumpula:\\n{kumpula_june.tail()}\")"
@@ -297,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -312,7 +382,29 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First values in May, Rovaniemi:\n",
+      "   Unnamed: 0   USAF  YR--MODAHRMN  TEMP  MAX  MIN  Celsius\n",
+      "0           0  28450  201705010000  31.0  NaN  NaN       -1\n",
+      "1           1  28450  201705010020  30.0  NaN  NaN       -1\n",
+      "2           2  28450  201705010050  30.0  NaN  NaN       -1\n",
+      "3           3  28450  201705010100  31.0  NaN  NaN       -1\n",
+      "4           4  28450  201705010120  30.0  NaN  NaN       -1\n",
+      "\n",
+      "Last values in May, Rovaniemi:\n",
+      "      Unnamed: 0   USAF  YR--MODAHRMN  TEMP  MAX  MIN  Celsius\n",
+      "2215        2217  28450  201705312220  32.0  NaN  NaN        0\n",
+      "2216        2218  28450  201705312250  32.0  NaN  NaN        0\n",
+      "2217        2219  28450  201705312300  33.0  NaN  NaN        1\n",
+      "2218        2220  28450  201705312320  32.0  NaN  NaN        0\n",
+      "2219        2221  28450  201705312350  30.0  NaN  NaN       -1\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"First values in May, Rovaniemi:\\n{rovaniemi_may.head()}\\n\")\n",
     "print(f\"Last values in May, Rovaniemi:\\n{rovaniemi_may.tail()}\")"
@@ -320,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -336,7 +428,29 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First values in June, Rovaniemi:\n",
+      "      Unnamed: 0   USAF  YR--MODAHRMN  TEMP  MAX  MIN  Celsius\n",
+      "2220        2222  28450  201706010000  32.0  NaN  NaN        0\n",
+      "2221        2223  28450  201706010020  30.0  NaN  NaN       -1\n",
+      "2222        2224  28450  201706010050  30.0  NaN  NaN       -1\n",
+      "2223        2225  28450  201706010100  31.0  NaN  NaN       -1\n",
+      "2224        2226  28450  201706010120  30.0  NaN  NaN       -1\n",
+      "\n",
+      "Last values in June, Rovaniemi:\n",
+      "      Unnamed: 0   USAF  YR--MODAHRMN  TEMP  MAX  MIN  Celsius\n",
+      "4342        4344  28450  201706302220  57.0  NaN  NaN       14\n",
+      "4343        4345  28450  201706302250  57.0  NaN  NaN       14\n",
+      "4344        4346  28450  201706302300  56.0  NaN  NaN       13\n",
+      "4345        4347  28450  201706302320  57.0  NaN  NaN       14\n",
+      "4346        4348  28450  201706302350  57.0  NaN  NaN       14\n"
+     ]
+    }
+   ],
    "source": [
     "print(f\"First values in June, Rovaniemi:\\n{rovaniemi_june.head()}\\n\")\n",
     "print(f\"Last values in June, Rovaniemi:\\n{rovaniemi_june.tail()}\")"
@@ -368,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -382,10 +496,28 @@
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kumpula May: MEAN: 10 MIN: -2 MAX: 23\n",
+      "Kumpula June: MEAN: 14 MIN: 3 MAX: 24\n",
+      "\n",
+      "Rovaniemi May: MEAN: 3 MIN: -7 MAX: 15\n",
+      "Rovaniemi June: MEAN: 11 MIN: -1 MAX: 23\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "# prints the mean, min and max Celsius temperatures for both places (kumpula and rovaniemi) in May and June\n",
+    "print(\"Kumpula May: MEAN: \" + str(round(kumpula_may[\"Celsius\"].mean())) + \" MIN: \" + str(kumpula_may[\"Celsius\"].min()) + \" MAX: \" + str(kumpula_may[\"Celsius\"].max()))\n",
+    "\n",
+    "print(\"Kumpula June: MEAN: \" + str(round(kumpula_june[\"Celsius\"].mean())) + \" MIN: \" + str(kumpula_june[\"Celsius\"].min()) + \" MAX: \" + str(kumpula_june[\"Celsius\"].max()) + \"\\n\")\n",
+    "\n",
+    "print(\"Rovaniemi May: MEAN: \" + str(round(rovaniemi_may[\"Celsius\"].mean())) + \" MIN: \" + str(rovaniemi_may[\"Celsius\"].min()) + \" MAX: \" + str(rovaniemi_may[\"Celsius\"].max()))\n",
+    "\n",
+    "print(\"Rovaniemi June: MEAN: \" + str(round(rovaniemi_june[\"Celsius\"].mean())) + \" MIN: \" + str(rovaniemi_june[\"Celsius\"].min()) + \" MAX: \" + str(rovaniemi_june[\"Celsius\"].max()))\n"
    ]
   },
   {
@@ -434,7 +566,8 @@
     }
    },
    "source": [
-    "YOUR ANSWER HERE"
+    "1. Well yes, but not so much than I expected\n",
+    "2. It is colder especially in may, the difference is smaller in june but it is still there"
    ]
   },
   {
